@@ -1,34 +1,54 @@
-package pe.edu.vallegrande.foods.config;
+package pe.edu.vallegrande.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
+import org.springframework.web.server.ServerWebExchange;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.function.Function;
+import java.util.regex.Pattern;
 
 @Configuration
 public class CorsConfig {
 
+    private static final List<String> STATIC_ALLOWED_ORIGINS = Arrays.asList(
+            "http://localhost:4200"
+    );
+
+    private static final Pattern GITPOD_REGEX = Pattern.compile(
+            "^https://4200-[a-z0-9\\-]+\\.ws-[a-z0-9]+\\.gitpod\\.io$"
+    );
+
     @Bean
     public CorsWebFilter corsWebFilter() {
-        CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(Arrays.asList(
-                "https://4200-vallegrande-vgwebdashbo-mvhhv12wpdh.ws-us118.gitpod.io",
-                "https://nph-ciclodevida.onrender.com/cicloVida",
-                "https://4200-vallegrande-vgwebdashbo-8a58inu3ult.ws-us118.gitpod.io",
-                "https://4200-vallegrande-vgwebdashbo-7wz0tlpfi8q.ws-us118.gitpod.io",
-                "https://4200-vallegrande-vgwebdashbo-r6vfykaqkjn.ws-us119.gitpod.io",
-                "http://localhost:4200"
-        ));
-        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
-        corsConfig.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        corsConfig.setAllowCredentials(true);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
+        config.setMaxAge(3600L); // Cache preflight for 1 hour
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfig);
+        CorsConfigurationSource source = new UrlBasedCorsConfigurationSource() {
+            @Override
+            public CorsConfiguration getCorsConfiguration(ServerWebExchange exchange) {
+                String origin = exchange.getRequest().getHeaders().getOrigin();
+                if (isAllowedOrigin(origin)) {
+                    config.setAllowedOrigins(List.of(origin)); // Solo permitir origen válido
+                    return config;
+                }
+                return null; // Bloquea CORS si el origen no es válido
+            }
+        };
 
         return new CorsWebFilter(source);
+    }
+
+    private boolean isAllowedOrigin(String origin) {
+        if (origin == null) return false;
+        return STATIC_ALLOWED_ORIGINS.contains(origin) || GITPOD_REGEX.matcher(origin).matches();
     }
 }
